[package]
name = "openagro"
version = "0.1.0"
edition = "2021"
license = "lgpl-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.7.0"
actix-web = "4.2.1"
async-trait = { version = "0.1.61" }
env_logger = "0.10.0"
tokio = { version = "1.24.1", features = ["full"] }


[profile.dev]
opt-level=3
